[FIX] web_editor: prevent input text overlapping button icon
When long text was entered in `.o_we_search` or `.o_we_search_select`
inputs, it could overlap the absolutely positioned button icon at the
end of the input.

This commit adds `padding-right` to these input classes to ensure that
typed content does not visually collide with the icon.

task-4771268

--- a/addons/web_editor/static/src/components/media_dialog/media_dialog.scss
+++ b/addons/web_editor/static/src/components/media_dialog/media_dialog.scss
@@ -68,3 +68,8 @@
         }
     }
 }
+
+.o_we_search_select,
+.o_we_search {
+    padding-right: 30px;
+}
